--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -26,6 +26,14 @@ body {
     background: linear-gradient(to bottom, rgba(0, 0, 0, 1.0), rgba(0, 0, 0, 0.0));
 }
 
+.scrollTop {
+    z-index: 280;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    max-height: 40px;
+}
+
 .titleLogo {
     margin-left: 70px;
     margin-top: 30px;
